--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap');
 
-body {
+* {
   margin: 0;
+}
+
+body {
   font-family: 'Do Hyeon', sans-serif;
   font-weight: 400;
   font-size: 16px;
